updated spec test for cassandra-env.sh and rubocop fix